# chemistry_chatbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.apprunner  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  test_followup.py  test_graph.py  test_image.py
.github/workflows/: deploy.yml
data/: chemistry_data.json  compounds.json
deploy/: init-ssl.sh  setup-ec2.sh
gradio/: app.py
scripts/: setup_minio.sh
src/: __init__.py  agent.py  main.py  tools.py
src/agent/: __init__.py  graph.py  schemas.py  state.py
src/agent/nodes/: __init__.py  conditional.py  extract_validate.py  generate.py  rephrase.py  retrieve.py  summarize_context.py
src/agent/tools/: __init__.py  image_search.py  isomers.py  search.py  speech.py
src/core/: logging.py
src/data/: compounds.json  rules.json
src/pipeline/: generate_tts.py  ingest.py  migrate_to_mongodb.py  upload_to_minio.py
src/services/: __init__.py  data_service.py  gemini_service.py  mongodb_service.py  qdrant_service.py
src/static/: index.html
streamlit_app/: app.py
