[project]
name = "chemistry-chatbot"
version = "0.1.0"
description = "Chemistry chatbot for Vietnamese high school students"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "fastapi>=0.120.4",
    "groq>=1.0.0",
    "langchain>=1.0.3",
    "langchain-openai>=1.1.2",
    "langgraph>=1.0.2",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]
